2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_output_unregister):
	Mark calling with invalid term as GRUB_ERR_BUG.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/tftp.c (tftp_receive): Silently discard too short
	packets rather than raising an error.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/xnu.c (grub_xnu_writetree_toheap_real): Avoid set
	in if.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/appleloader.c (grub_cmd_appleloader): Move
	diagnostic to dprintf.
	* grub-core/loader/i386/pc/linux.c (grub_cmd_linux): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/corecmd.c (grub_core_cmd_ls): Handle error in parsing
	device name.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (locate_attr): Avoid set in if.
	(grub_ntfs_iterate_dir): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Efiemu stylistic fixes and gettext.

	* grub-core/efiemu/i386/loadcore32.c
	(grub_arch_efiemu_relocate_symbols32): Avoid set in if.
	* grub-core/efiemu/i386/loadcore64.c
	(grub_arch_efiemu_relocate_symbols64): Likewise.
	* grub-core/efiemu/i386/pc/cfgtables.c
	(grub_machine_efiemu_init_tables): Likewise.
	* grub-core/efiemu/loadcore.c (grub_efiemu_resolve_symbols): Likewise.
	(grub_efiemu_loadcore_initXX): Add a filename argument.
	All users updated.
	Improved error message.
	* grub-core/efiemu/loadcore_common.c (grub_efiemu_loadcore_init):
	Add a filename argument.
	All users updated.
	* grub-core/efiemu/symbols.c (grub_efiemu_set_virtual_address_map):
	Reclassify double relocation as GRUB_ERR_BUG.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/pc/play.c (grub_cmd_play): Improve error
	handling.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hdparm.c (grub_cmd_hdparm): Allow running
	on partition.
